--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
             <li><a href="#about-cont">About Me</a></li>
             <li><a href="#skills-cont">Skills</a></li>
             <li><a href="#project-cont">Projects</a></li>
-            <li><a href="#">Experience</a></li>
+            <li><a href="#experience-cont">Experience</a></li>
             <li><a href="#contact-info-cont">Contact</a></li>
-            <li><a href="./resume/Praveen_resume.pdf" download onclick="window.open('https://drive.google.com/file/d/1NXDeM6YWu0sKYEqsiWaIQzumREG3rfxs/view?usp=sharing')">Resume</a></li>
+            <li><a href="./resume/preveen_resume.pdf" download onclick="window.open('https://drive.google.com/file/d/1NXDeM6YWu0sKYEqsiWaIQzumREG3rfxs/view?usp=sharing')">Resume</a></li>
         </ul>
       </nav>  
+      <!-- <embed src="./resume/preveen_resume.pdf" type="application/pdf" width="400px" height="600px"> -->
       <div class="user-cont" id="user-cont">
         <div class="user-img-cont">
           <div class="pro-img">
@@ -34,11 +35,11 @@
             <h2>FULL-STACK WEB DEVELOPER </h2>
             <p>form West Bengal, India</p>
             <a href="#"><button class="resume-btn" >Resume</button></a>
-            <a href=""><button class="contact-btn">Contact Me</button></a>
+            <a href="#contact-info-cont"><button class="contact-btn">Contact Me</button></a>
         </div>
       </div>
       <div class="about-cont" id="about-cont">
-        <h3>About Me</h3>
+        <h3><p>About Me</p></h3>
         <p class="para">
             <span>Hi, I'am</span><span>Praveen Kumar Yadav</span><br>
             I am currently learning full stack web development including Frontend 
@@ -67,7 +68,7 @@
         </ul>
       </div>
       <div class="skills-cont" id="skills-cont">
-        <h3>Skills</h3>
+        <h3><p>Skills</p></h3>
         <div class="skill">
           <div>
             <img src="./lang_img/html.jpg" alt="">
@@ -128,11 +129,40 @@
         </div>
       </div>
       <div class="experience-cont" id="experience-cont">
-        <div></div>
-        <div></div>
+        <h3><p>Experiences</p></h3>
+        <div class="exp-sec">
+          <div>
+            <ul>
+              <li class="company-img"><img src="/imgages/internPe.jpeg" alt=""></li>
+              <li><span>Aug 2023 To Sep 2023</span></li>
+              <li>Company Name : <span>InternPe</span></li>
+              <li>Domain: <span>Web Developement</span></li>
+              <li>Designation: <span>Intern</span></li>
+              <li>
+                <p>
+
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li class="company-img"><img src="/imgages/innovixion_tech.jpeg" alt=""></li>
+              <li><SPan>Nov 2023 To Dec 2023</SPan></li>
+              <li>Company Name : <span>Innovixion Tech</span></li>
+              <li>Domain: <span>Web Developement</span></li>
+              <li>Designation: <span>Intern</span></li>
+              <li>
+                <p>
+
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="project-cont" id="project-cont">
-        <h3>Projects</h3>
+        <h3><p>Projects</p></h3>
         <div class="projects">
           <div class="proj-card">
             <div>
@@ -225,13 +255,16 @@
           </div>
           <div>
             <a href="https://www.linkedin.com/in/praveen-yadav-4aa519249/">
-                <img src="./imgages/linkdin.jpg" alt="">
+                <img src="./imgages/linkdin.jpg" alt="Linkdin">
             </a>
             <a href="https://github.com/praviny7278">
-                <img src="./imgages/GitHub-Mark-ea2971cee799.png" alt="">
+                <img src="./imgages/GitHub-Mark-ea2971cee799.png" alt="GitHub">
             </a>
             <a href="https://www.youtube.com/channel/UCHh8YPQd7PBTUXBj_fp36rQ">
-                <img src="./imgages/youtube-official-website-1652852582.jpg" alt="">
+                <img src="./imgages/youtube-official-website-1652852582.jpg" alt="Youtube">
+            </a>
+            <a href="https://twitter.com/PravinY53743120">
+              <img src="./imgages/Twitter-1-1.jpg" alt="Twitter">
             </a>
           </div>
         </div>
