--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#project-cont">Projects</a></li>
             <li><a href="#experience-cont">Experience</a></li>
             <li><a href="#contact-info-cont">Contact</a></li>
-            <li><a href="./resume/preveen_resume.pdf" download onclick="window.open('https://drive.google.com/file/d/1NXDeM6YWu0sKYEqsiWaIQzumREG3rfxs/view?usp=sharing')">Resume</a></li>
+            <li><a href="./resume/praveen_resume_2.pdf" download onclick="window.open('https://drive.google.com/file/d/1YSWWUL6YnXPq-GuqWRETfkEVUaCmEe_3/view?usp=sharing')">Resume</a></li>
         </ul>
       </nav>  
       <!-- <embed src="./resume/preveen_resume.pdf" type="application/pdf" width="400px" height="600px"> -->
