--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3>Hi, I'M Praveen Kumar Yadav</h3>  
             <h2>FULL-STACK WEB DEVELOPER </h2>
             <p>form West Bengal, India</p>
-            <a href="#"><button class="resume-btn" >Resume</button></a>
+            <a href="https://drive.google.com/file/d/1YSWWUL6YnXPq-GuqWRETfkEVUaCmEe_3/view?usp=sharing"><button class="resume-btn" >Resume</button></a>
             <a href="#contact-info-cont"><button class="contact-btn">Contact Me</button></a>
         </div>
       </div>
